apps/home-automation/homeassistant/overlays/homelab/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
    nginx.ingress.kubernetes.io/proxy-body-size: 1g
spec:
  ingressClassName: nginx
  tls:
    - hosts: ["homeassistant.support4u.se"]
      secretName: tls-homeassistant
  rules:
    - host: homeassistant.support4u.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homeassistant
                port:
                  number: 8123
